[package]
edition = "2021"
name = "zbuild"
version = "0.1.1"

[dependencies]

# Futures
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
async-broadcast = "0.5.0"
async-recursion = "1.0.0"
futures = "0.3.25"

# Concurrency
dashmap = "5.4.0"

# Cmd
clap = { version = "4.0.32", features = ["derive"] }

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

# Error handling
anyhow = "1.0.68"
thiserror = "1.0.38"

# Serde
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"

# File system
notify = "5.0.0"
notify-debouncer-mini = "0.2.1"
filetime = "0.2.19"


# Util
itertools = "0.10.5"
npath = { git = "https://github.com/gdzx/npath", rev = "00acdd2974bb1682b6d1dcc6f0ea7cd54da42381" }
pin-project = "1.0.12"
